# rpi-ds18b20-temperature-logger

./: .gitignore  README.md  justfile  pyproject.toml  rpi_host_config_example.yaml
rpi_ds18b20_temperature_logger/: README.md  __init__.py  main.py  pyproject.toml  specifications.py  temperatur_logger.py  temperature_logger.py
tools/: __init__.py  main.py  pyproject.toml  ssh_client.py  tools.py  upload_app_to_rpi.py
