[project]
name = "rpi-ds18b20-temperature-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["ALL", "Q"]
ignore = [
    "T201", # print
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
